# tetris-opengl

./: .gitignore  :w  CMakeLists.txt  build.sh  install_libs.sh
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
src/: figure.hpp  input.hpp  main.cpp  score.hpp  shader.h
src/shaders/: shader.frag  shader.vert
